# greensight

./: .gitignore  connect_sharepoint  pyproject.toml  setup.cfg
data/: sentinel_data
data/id_lookup/: id_lookup.json
data/processed_data/: jules_soil.hdf  jules_veg.hdf  sentinel_one_all.hdf  sentinel_one_df.hdf  sentinel_one_weights.hdf  sentinel_two_df.hdf  sentinel_two_weights.hdf
documents/: 1. GreenSight Project_EP_MM.docx
greensight/: indices.py  processing.py  reports.py  utils.py
notebooks/: 05_data_check.ipynb
notebooks/pipeline/: 00_sentinel_one_data_processing.ipynb  01_Sentinel_one_weight_generation.ipynb  01_sentinel_one_correlation.ipynb  02A_sentinel_two_index_processing.ipynb  02_JULES_data.ipynb  02_sentinel_two_data_processing.ipynb  03A_Sentinel_two_index_weight_generation.ipynb  03_Sentinel_two_weight_generation.ipynb  03_sentinel_one_complete_data.ipynb  03_sentinel_one_correlation.ipynb  03_sentinel_two_data_processing.ipynb  04_JULES_data.ipynb  04_Sentinel_two_weight_generation.ipynb  04_sentinel_one_correlation.ipynb  05_complete_data.ipynb  05_sentinel_two_index_processing.ipynb  06_correlation.ipynb  07_JULES_data.ipynb  07_deviation_correlation.ipynb  08_complete_data.ipynb  10_JULES_analysis.ipynb  11_correlation.ipynb  12_deviation_correlation.ipynb
notebooks/sandbox/: 00_data_first_look.ipynb  01_shape_files_first_look.ipynb  02_greenbelt_id_builder.ipynb  03_data_unification.ipynb  04_data_unification_reviesed.ipynb  Untitled.ipynb  (+5 more)
updated_code/: PlotToSat_test3_shp.ipynb  Sentinel2b.ipynb  Sentinel2b_test.ipynb  indices.py
(+17 files in other folders)
