[tool.poetry]
name = "greensight"
version = "0.1.0"
description = "Repository for the green sight project."
authors = ["Finley Gibson <f.j.gibson@exeter.ac.uk>"]
readme = "README.md"
packages = [{include = "greensight"}]

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.5"
matplotlib = "^3.9.2"
geopandas = "^1.0.1"
tqdm = "^4.66.5"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
openpyxl = "^3.1.5"
tables = "^3.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
