[metadata]
name = greensight 
version = 0.0.0
author = Finley Gibson
author_email = f.j.gibson@exeter.ac.uk
description = Green Sight project package.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src/python/
include_package_data = True
install_requires =
    numpy
    pandas
    matplotlib
    seaborn
    scipy
    tqdm
    pytest
    jupyterlab
    openpyxl
    

[tool:pytest]
testpaths = src/python/tests
